fix(retailers): row-gap for flex has poor support

--- a/src/components/shared/retailers/retailersModal/retailersModal.module.scss
+++ b/src/components/shared/retailers/retailersModal/retailersModal.module.scss
@@ -230,7 +230,8 @@ $options-top-padding: 0.2rem;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-end;
-	row-gap: calc(#{$options-top-padding} + #{$options-border});
+	margin: calc(#{-$options-top-padding} + #{-$options-border}) 0 0 0;
+	// row-gap: calc(#{$options-top-padding} + #{$options-border});
 
 	@include m.media('<=phone') {
 		align-items: stretch;
@@ -259,7 +260,7 @@ $options-top-padding: 0.2rem;
 	border-radius: v.$border-radius/2;
 	color: rgba(v.$black, $radio-label-opacity);
 	cursor: pointer;
-	margin: 0 1rem 0 0;
+	margin: calc(#{$options-top-padding} + #{$options-border}) 1rem 0 0;
 	padding: 0.2rem 1rem;
 	user-select: none;
 
